view fix, sizes fix, sql procedure added
added password validation for registration
improved grid for Product Index
improved product details view
improved register and login views
fixed error with sizes (js)
added xs size quantity in seed

--- a/shop-web-app/Views/Home/Index.cshtml
+++ b/shop-web-app/Views/Home/Index.cshtml
@@ -5,52 +5,6 @@
 <body>
     
     <main>
-        @* <div id="myCarousel" class="carousel carousel-dark slide mb-6" data-bs-ride="carousel">
-            <div class="carousel-indicators ">
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <svg class="img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
-                    <div class="container">
-                        <div class="carousel-caption text-start text-dark">
-                            <p class="opacity-75">Uzyskaj dostęp do naszej oferty już teraz!</p>
-                            <p><a class="btn btn-lg btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Załóż konto</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
-                    <div class="container">
-                        <div class="carousel-caption text-dark">
-                            <p>Some representative placeholder content for the second slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="white" /></svg>
-                    <div class="container">
-                        <div class="carousel-caption text-end text-dark">
-                            <p>Some representative placeholder content for the third slide of this carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-dark carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-dark carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div> *@
-
-
         <section class="py-5 text-center bg-image position-relative" style="background-image: url('https://images.pexels.com/photos/1549200/pexels-photo-1549200.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100vw; margin-top: -20px; margin-left: calc(50% - 50vw); min-height: 900px;">
             <div class="overlay"></div>
 
@@ -61,21 +15,14 @@
             </div>
         </section>
 
-
-        <!-- Marketing messaging and featurettes
-        ================================================== -->
-        <!-- Wrap the rest of the page in another container to center all the content. -->
-
         <div class="container marketing">
-
-            <!-- START THE FEATURETTES -->
 
             <hr class="featurette-divider">
 
             <div class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">Dopasowujemy się pod wasze wymagania</h2>
-                    <p class="lead">Niewolniczą pracą biednych ludzi w Azji jesteśmy w stanie wam zapewnić to co kochacie po i tak wysokich cenach.</p>
+                    <p class="lead">Planujesz jakieś wyjście? Koniecznie zobacz sukienki damskie: mamy fasony mini, midi i maxi na letnie wieczory, a także stylowe dżinsy i spodnie, które świetnie leżą na każdej sylwetce.</p>
                 </div>
                 <div class="col-md-5">
                     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="https://image.hm.com/assets/hm/d4/9a/d49a3027b2c6247ca96bb30bf60c7a7d4dbb87c2.jpg?imwidth=657" >
