--- a/shop-web-app/Views/Account/Login.cshtml
+++ b/shop-web-app/Views/Account/Login.cshtml
@@ -8,40 +8,31 @@
 @model LoginViewModel
 
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <p>
-            <h2>Zaloguj się do swojego konta</h2>
-        </p>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6 col-lg-4 col-sm-8">
+        <h2 class="mb-3">Zaloguj się do swojego konta</h2>
 
-        @if(TempData["Error"] != null)
+        @if (TempData["Error"] != null)
         {
-            <div class="col-md-12 alert alert-danger">
-                <span><b>Błąd!</b> - @TempData["Error"]</span>    
+            <div class="alert alert-danger">
+                <span><b>Błąd!</b> - @TempData["Error"]</span>
             </div>
         }
-        <div class="row">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Login">
-                    <div class="form-group mb-3">
-                        <label asp-for="Email">Adres e-mail</label>
-                        <input asp-for="Email" type="email" class="form-control" placeholder="Wprowadź adres e-mail">
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Password">Hasło</label>
-                        <input asp-for="Password" type="password" class="form-control" placeholder="Wprowadź hasło">
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Zapamiętaj mnie</label>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" class="btn btn-outline-success float right" value="Zaloguj się" />
-                    </div>
-                </form>
+
+        <form asp-action="Login">
+            <div class="form-group mb-3">
+                <label asp-for="Email">Adres e-mail</label>
+                <input asp-for="Email" type="email" class="form-control" placeholder="Wprowadź adres e-mail">
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-        </div>
+            <div class="form-group mb-3">
+                <label asp-for="Password">Hasło</label>
+                <input asp-for="Password" type="password" class="form-control" placeholder="Wprowadź hasło">
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group text-end">
+                <input type="submit" class="btn btn-outline-success" value="Zaloguj się" />
+            </div>
+        </form>
     </div>
 </div>
