--- a/shop-web-app/Views/Account/Register.cshtml
+++ b/shop-web-app/Views/Account/Register.cshtml
@@ -8,64 +8,58 @@
 }
 @model RegisterViewModel
 
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <p>
-            <h2>Utwórz nowe konto</h2>
-        </p>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6 col-lg-4 col-sm-8">
+        <h2 class="mb-3">Utwórz nowe konto</h2>
 
         @if (TempData["Error"] != null)
         {
-            <div class="col-md-12 alert alert-danger">
+            <div class="alert alert-danger">
                 <span><b>Błąd!</b> - @TempData["Error"] </span>
             </div>
         }
 
-        <div class="row">
-            <div class="col-md-8 offset-2">
-                <form asp-action="Register">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Register">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-group mb-3">
-                        <label asp-for="Name" class="control-label"></label>
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Surname" class="control-label"></label>
-                        <input asp-for="Surname" class="form-control" />
-                        <span asp-validation-for="Surname" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Email" class="control-label"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Gender" class="control-label"></label>
-                        <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<Gender>()" class="form-control">
-                            <option value="@null">--- Wybierz płeć ---</option>
-                        </select>
-                        <span asp-validation-for="Gender" class="text-danger"></span>
-                        <small class="form-text text-muted">Wybór płci pozwala nam na lepsze dobranie oferty dla Ciebie</small>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mb-3">
-                        <label asp-for="ConfirmPassword" class="control-label"></label>
-                        <input asp-for="ConfirmPassword" class="form-control" />
-                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <input class="btn btn-outline-success float-right" type="submit" value="Załóż konto" />
-                        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Anuluj</a>
-                    </div>
-                </form>
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-        </div>
+            <div class="form-group mb-3">
+                <label asp-for="Surname" class="control-label"></label>
+                <input asp-for="Surname" class="form-control" />
+                <span asp-validation-for="Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="Gender" class="control-label"></label>
+                <select asp-for="Gender" asp-items="@Html.GetEnumSelectList<Gender>()" class="form-control">
+                    <option value="@null">--- Wybierz płeć ---</option>
+                </select>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+                <small class="form-text text-muted">Wybór płci pozwala nam na lepsze dobranie oferty dla Ciebie</small>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
+                <label asp-for="ConfirmPassword" class="control-label"></label>
+                <input asp-for="ConfirmPassword" class="form-control" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+
+            <div class="form-group text-end">
+                <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Anuluj</a>
+                <input class="btn btn-outline-success float-right" type="submit" value="Załóż konto" />
+            </div>
+        </form>
     </div>
 </div>
