--- a/shop-web-app/Views/Dashboard/Index.cshtml
+++ b/shop-web-app/Views/Dashboard/Index.cshtml
@@ -6,7 +6,7 @@
 @model DashboardViewModel
 
 <body class="bg-body-tertiary">
-    <div class="container w-100">
+    <div class="w-100 container">
 
         @if (TempData["Error"] != null)
         {
@@ -17,9 +17,9 @@
 
         <div class="row g-5">
             <div class="col-md-5 col-lg-4 order-md-last p-3">
-                <h4 class="text-center mb-3 mt-1">Twoje konto</h4>
-                <div class="shadow rounded">
-                    <img src="https://cdn.pixabay.com/photo/2016/09/28/02/14/user-1699635_1280.png" class="rounded mx-auto d-block mt-4" style="width: 200px; height: 200px;" alt="User profile icon">
+                <h4 class="mb-3 mt-1 text-center">Twoje konto</h4>
+                <div class="rounded shadow">
+                    <img src="https://cdn.pixabay.com/photo/2016/09/28/02/14/user-1699635_1280.png" class="d-block mt-4 mx-auto rounded" style="width: 200px; height: 200px;" alt="User profile icon">
                     <div class="p-3">
                         <div class="text-center">
                             <h5>@Model.AppUser.Name @Model.AppUser.Surname</h5>
@@ -46,7 +46,7 @@
                                 }
                             </div>
                         </div>
-                        <div class="text-center mt-3">
+                        <div class="mt-3 text-center">
                             <a type="button" class="btn btn-outline-secondary" asp-area="" asp-controller="Account" asp-action="Edit">Edytuj dane <i class="bi bi-pencil-fill"></i></a>
                         </div>
                     </div>
@@ -56,6 +56,10 @@
             <div class="col-md-7 col-lg-8">
 
                 <h1 class="display-6 fw-normal">Zamówienia</h1>
+                @if(Model.Orders.Count == null || Model.Orders.Count == 0)
+                {
+                    <h3 class="text-secondary lead p-3 text-center"><i class="bi bi-info-circle p-2"></i> Nie złożono żadnych zamówień.</h3>
+                }
                 @foreach(var order in Model.Orders)
                 {
                     <div class="my-3 p-3 bg-white rounded shadow">
