--- a/shop-web-app/Views/Product/Create.cshtml
+++ b/shop-web-app/Views/Product/Create.cshtml
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <div class="form-group mb-1 "id="variantsContainer">
+    <div class="form-group mb-1"id="variantsContainer">
         <!-- Dynamicznie dodawane warianty pojawią się tutaj -->
     </div>
     <div class="form-group mb-2" id="removeVariantContainer">
@@ -119,11 +119,10 @@
         <button type="button" class="btn btn-primary" onclick="addVariant()">Dodaj Wariant</button>
     </div>
 
-    <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <div class="text-center">
+        <button type="submit" class="btn-lg btn btn-success">Dodaj produkt</button>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    
 
     <script src="CreateHelper.js">
     </script>
