non admins can't see inactive items

--- a/shop-web-app/Views/Product/Index.cshtml
+++ b/shop-web-app/Views/Product/Index.cshtml
@@ -248,7 +248,14 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
-                                    <a asp-controller="Product" asp-action="Details" asp-route-id=@item.Id class="card-text lead text-black" style="text-decoration: none;">@item.Name</a>
+                                    @if (item.IsActive)
+                                    {
+                                        <a asp-controller="Product" asp-action="Details" asp-route-id=@item.Id class="card-text lead text-black" style="text-decoration: none;">@item.Name</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="Product" asp-action="Details" asp-route-id=@item.Id class="card-text lead text-danger" style="text-decoration: none;">@item.Name</a>
+                                    }
                                     @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                                     {
                                         <a asp-controller="Product" asp-action="Edit" asp-route-id=@item.Id class="text-secondary text-lg-center"><i class="bi bi-pencil-square"></i></a>
