Order details, status changing
User can now see new order details view. The view can only be accessed by customer who owns the order or admin/employee.
Admin/employee can change the status of the order in the details view

--- a/shop-web-app/Views/Dashboard/Index.cshtml
+++ b/shop-web-app/Views/Dashboard/Index.cshtml
@@ -130,8 +130,9 @@
                                         </div>
                                         
                                     </div>
-                                        
-                                    
+                                    <div class="text-end">
+                                        <a class="text-secondary" asp-controller="Order" asp-action="Details" asp-route-id="@order.Id"><b>Szczegóły zamówienia <i class="bi bi-chevron-right"></i></b></a>
+                                    </div>
                                 }
                                 
                             </div>
