--- a/shop-web-app/Views/Shared/_Layout.cshtml
+++ b/shop-web-app/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Product" asp-action="Index" class="nav-link">Produkty</a>
                     </li>
+                    @if(User.IsInRole("admin") || User.IsInRole("employee"))
+                    {
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Order" asp-action="Index" class="nav-link">Zamówienia</a>
+                        </li>
+                    }
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     @if (User.Identity.IsAuthenticated)
