--- a/shop-web-app/Views/Order/Details.cshtml
+++ b/shop-web-app/Views/Order/Details.cshtml
@@ -41,7 +41,7 @@
 
             <div class="row py-3">
                 <div class="col">
-                    <h5><i class="bi bi-geo-alt"></i> Adres dostawy</h5>
+                    <h5><i class="bi bi-truck"></i> Adres dostawy</h5>
                     <p class="mb-0">@Model.Order.DeliveryAddress.PostalCode @Model.Order.DeliveryAddress.City, ul. @Model.Order.DeliveryAddress.Street</p>
                     <p class="mb-0">woj. @Model.Order.DeliveryAddress.Voivodship.ToFriendlyString()</p>
                 </div>
