--- a/shop-web-app/Views/Shared/_Layout.cshtml
+++ b/shop-web-app/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a asp-area="" asp-controller="Product" asp-action="Index" class="nav-link">Produkty</a>
+                        <a asp-area="" asp-controller="Product" asp-action="Index" asp-route-page=1 class="nav-link">Produkty</a>
                     </li>
                     @if(User.IsInRole("admin") || User.IsInRole("employee"))
                     {
