--- a/shop-web-app/Views/Dashboard/Index.cshtml
+++ b/shop-web-app/Views/Dashboard/Index.cshtml
@@ -75,6 +75,12 @@
                                 
                                 @foreach(var orderItem in order.OrderItems)
                                 {
+                                    string imgUrl = "https://placehold.co/300x300?text=Brak+obrazu";
+
+                                    if (orderItem.Variant.Photos != null && orderItem.Variant.Photos.Any())
+                                    {
+                                        imgUrl = orderItem.Variant.Photos.First().PhotoUrl;
+                                    }
                                     if(i != 0)
                                     {
                                         <hr />
@@ -82,7 +88,7 @@
                                     i++;
                                     <div class="col-md-2" style="width: 100px; height: 120px;">
                                         <img alt="@orderItem.Variant.Product.Name Thumbnail"
-                                             src="@orderItem.Variant.Photos.First().PhotoUrl"
+                                             src="@imgUrl"
                                              class="img-fluid"  />
                                     </div>
                                     <div class="col-md-10">
